@@ -4,15 +4,14 @@ package com.yugabyte.yw.models;
 
 import static com.yugabyte.yw.common.ModelFactory.createUniverse;
 import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertTrue;
 
 import com.fasterxml.jackson.databind.JsonNode;
 import com.yugabyte.yw.common.FakeDBApplication;
 import com.yugabyte.yw.common.ModelFactory;
-import com.yugabyte.yw.forms.XClusterConfigCreateFormData.BootstrapParams.BootstarpBackupParams;
+import com.yugabyte.yw.forms.XClusterConfigCreateFormData.BootstrapParams.BootstrapBackupParams;
 import com.yugabyte.yw.models.XClusterConfig.ConfigType;
 import com.yugabyte.yw.models.configs.CustomerConfig;
-import java.util.Arrays;
-import java.util.HashSet;
 import java.util.Set;
 import org.junit.Before;
 import org.junit.Test;
@@ -21,9 +20,8 @@ import play.libs.Json;
 public class DrConfigTest extends FakeDBApplication {
   private Universe sourceUniverse;
   private Universe targetUniverse;
-  private Customer defaultCustomer;
   private CustomerConfig config;
-  private BootstarpBackupParams backupRequestParams;
+  private BootstrapBackupParams backupRequestParams;
 
   private CustomerConfig createData(Customer customer) {
     JsonNode formData =
@@ -36,18 +34,18 @@ public class DrConfigTest extends FakeDBApplication {
 
   @Before
   public void setUp() {
-    defaultCustomer = ModelFactory.testCustomer();
+    Customer defaultCustomer = ModelFactory.testCustomer();
     config = createData(defaultCustomer);
     sourceUniverse = createUniverse("source Universe");
     targetUniverse = createUniverse("target Universe");
 
-    backupRequestParams = new BootstarpBackupParams();
+    backupRequestParams = new BootstrapBackupParams();
     backupRequestParams.storageConfigUUID = config.getConfigUUID();
   }
 
   @Test
   public void testCreateDbScopedDrConfig() {
-    Set<String> sourceDbIds = new HashSet<String>(Arrays.asList("db1", "db2"));
+    Set<String> sourceDbIds = Set.of("db1", "db2");
     DrConfig drConfig =
         DrConfig.create(
             "replication1",
@@ -63,11 +61,15 @@ public class DrConfigTest extends FakeDBApplication {
     assertEquals(0, activeXClusterConfig.getTableIds().size());
     assertEquals(ConfigType.Db, activeXClusterConfig.getType());
     assertEquals(config.getConfigUUID(), found.getStorageConfigUuid());
+    assertTrue(
+        activeXClusterConfig
+            .getReplicationGroupName()
+            .startsWith(sourceUniverse.getUniverseUUID().toString()));
   }
 
   @Test
   public void testCreateTxnDrConfig() {
-    Set<String> sourceTableIds = new HashSet<String>(Arrays.asList("table1", "table2", "table3"));
+    Set<String> sourceTableIds = Set.of("table1", "table2", "table3");
     DrConfig drConfig =
         DrConfig.create(
             "replication2",
